--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -16,6 +17,7 @@
     "react-export-excel": "^0.5.3",
     "react-form-hook": "^0.0.1",
     "react-hook-form": "^7.36.1",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1"
   },
   "devDependencies": {
